--- a/backend/templates/base.html
+++ b/backend/templates/base.html
@@ -6,6 +6,12 @@
         <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
         <title>{% block title %}Flask OSM App{% endblock %}</title>
         <script src="https://unpkg.com/htmx.org@1.9.2"></script>
+        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+     integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+     crossorigin=""/>
+     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+     crossorigin=""></script>
     </head>
     
 <body>
@@ -21,10 +27,12 @@
         {% block content %}{% endblock %}
     </main>
 
-    <footer>
+    <!-- <footer>
         <p>&copy; 2024 OSM Route Finder</p>
-    </footer>
+    </footer> -->
 
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+    <script src="https://unpkg.com/htmx.org@1.9.2"></script>
+    
 </body>
 </html>
