--- a/backend/static/css/style.css
+++ b/backend/static/css/style.css
@@ -35,3 +35,12 @@ footer {
     bottom: 0;
     width: 100%;
 }
+
+#map {
+    display: block;
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+    height: 500px;
+}
