--- a/backend/static/css/style.css
+++ b/backend/static/css/style.css
@@ -1,46 +1,33 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f9f9f9;
+.route-result {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
 }
 
-header {
-    background-color: #333;
-    color: #fff;
-    padding: 10px 0;
-    text-align: center;
+.route-result h2 {
+  margin-bottom: 20px;
 }
 
-nav a {
-    color: white;
-    padding: 10px;
-    text-decoration: none;
+.route-result img {
+  width: 100%;
+  max-width: 500px;
+  margin-bottom: 20px;
 }
 
-nav a:hover {
-    background-color: #575757;
+#route-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 2px;
 }
 
-main {
-    padding: 20px;
+#route-form input {
+  margin-bottom: 2px;
 }
 
-footer {
-    text-align: center;
-    padding: 10px;
-    background-color: #333;
-    color: white;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-}
-
-#map {
-    display: block;
-    margin-top: 20px;
-    margin-left: auto;
-    margin-right: auto;
-    width: 100%;
-    height: 500px;
+#route-form button {
+  margin-top: 10px;
 }
