--- a/backend/templates/route.html
+++ b/backend/templates/route.html
@@ -5,10 +5,11 @@
 
 {% block content %}
     <h2>Find the Most Efficient Route</h2>
+    
     <form id="route-form" hx-post="{{ url_for('get_route') }}" hx-target="#route-result" hx-swap="innerHTML">
         <!-- Form fields -->
         <label for="address1">Address 1:</label>
-        <input type="text" id="address1" name="address1" required><br>
+        <input  type="text" id="address1" name="address1" required><br>
 
         <label for="address2">Address 2:</label>
         <input type="text" id="address2" name="address2" required><br>
@@ -16,7 +17,7 @@
         <label for="address3">Address 3:</label>
         <input type="text" id="address3" name="address3"><br>
 
-        <button type="submit">Find Route</button>
+        <button class="btn  btn-dark" type="submit">Find Route</button>
     </form>
 
     <div id="route-result">
