--- a/backend/templates/layout.html
+++ b/backend/templates/layout.html
@@ -15,6 +15,7 @@
         {% block content %}
         
         {% endblock %}
+        <script src="https://unpkg.com/htmx.org@2.0.4"></script>
     </main>
     <footer>
         <p>&copy; 2023 Traveling Salesman Problem</p>
