--- a/backend/templates/layout.html
+++ b/backend/templates/layout.html
@@ -18,7 +18,13 @@
         <script src="https://unpkg.com/htmx.org@2.0.4"></script>
     </main>
     <footer>
-        <p>&copy; 2023 Traveling Salesman Problem</p>
+        <p></p>
+        <script>
+            document.addEventListener('DOMContentLoaded', (event) => {
+                const year = new Date().getFullYear();
+                document.querySelector('footer p').textContent = `© ${year} Innov Software Workshop. All rights reserved.`;
+            });
+        </script>
     </footer>
 </body>
 </html>
