--- a/backend/templates/pages/map/map_layout.html
+++ b/backend/templates/pages/map/map_layout.html
@@ -1,34 +1,30 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>OpenStreetMap with Leaflet</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" />
-    <style>
-        #map {
-            height: 600px;
-            width: 100%;
-        }
-    </style>
-</head>
-<body>
+
+<div>
     Your location is {{ location }}.
+    <br>
+    Your Lattitude is {{ latitude }} and Longitude is {{ longitude }}.
     
     
-    <div id="map"></div>
+    <div id="map" class="service-map"></div>
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script>
-        var map = L.map('map').setView([51.505, -0.09], 13);
+        var lat = {{latitude}};
+        var lon = {{longitude}};
+       
+        document.body.addEventListener('htmx:afterSwap', (event) => {
+    // Check if the swapped content includes the map container
+    if (document.getElementById('map')) {
+        var map = L.map('map', {
+            center: [lat, lon],
+            zoom: 12
+        });
 
-        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
             attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
         }).addTo(map);
-
-        L.marker([51.5, -0.09]).addTo(map)
-            .bindPopup('A pretty CSS3 popup.<br> Easily customizable.')
-            .openPopup();
+    }
+});
     </script>
-</body>
-</html>
+</div>
+
 
