--- a/backend/static/styles.css
+++ b/backend/static/styles.css
@@ -90,3 +90,12 @@ input {
     background-color: #555;
     border-radius: 5px;
 }
+
+#map {
+    height: 200px;
+    width: 100%;
+}
+.service-map {
+    height: 100px;
+    width: 100%;
+}
