--- a/backend/templates/pages/services.html
+++ b/backend/templates/pages/services.html
@@ -5,7 +5,7 @@
     <h2>Our Services</h2>
     <p>We offer practical solution to finding best routes through multiple location. It is easy and 99.99 percent accurate. </p>
     <p>Our services are available 24/7 and we are always ready to help you with your traveling needs.</p>
-    <button hx-get="/test" hx-swap="outerHTML">Test</button>
+    <!-- <button hx-get="/test" hx-swap="outerHTML">Test</button> -->
     <div>
         <h2>Check Map</h2>
         <button hx-get="/checkmap" hx-swap="outerHTML">Find Location</button>
