--- a/backend/static/styles.css
+++ b/backend/static/styles.css
@@ -91,11 +91,7 @@ input {
     border-radius: 5px;
 }
 
-#map {
+#map-container {
     height: 200px;
-    width: 100%;
-}
-.service-map {
-    height: 100px;
     width: 100%;
 }
