--- a/backend/templates/pages/services.html
+++ b/backend/templates/pages/services.html
@@ -8,7 +8,7 @@
     <!-- <button hx-get="/test" hx-swap="outerHTML">Test</button> -->
     <div>
         <h2>Check Map</h2>
-        <button hx-get="/checkmap" hx-swap="outerHTML">Find Location</button>
+        <button class="swap-button"hx-get="/checkmap" hx-swap="outerHTML">Find Location</button>
         
 
     </div>
