--- a/backend/templates/pages/services.html
+++ b/backend/templates/pages/services.html
@@ -1,16 +1,29 @@
 {% extends "layout.html" %}
 
 {% block content %}
-    <div>
-    <h2>Our Services</h2>
-    <p>We offer practical solution to finding best routes through multiple location. It is easy and 99.99 percent accurate. </p>
+    <div >
+    <h1>Our Services</h1>
+    <h2>Location Map Serive</h2>
+    <p>We offer practical solution to finding your location or location of your destination on the map. It is easy and percent accurate. </p>
     <p>Our services are available 24/7 and we are always ready to help you with your traveling needs.</p>
+    <p>Just enter your location in fourm and check out the Location map on your leasure.</p>
     <!-- <button hx-get="/test" hx-swap="outerHTML">Test</button> -->
-    <div>
+    <div >
         <h2>Check Map</h2>
-        <button class="swap-button"hx-get="/checkmap" hx-swap="outerHTML">Find Location</button>
-        
-
+        <button id="swap-button" hx-get="/checkmap"hx-trigger="mouseenter once" hx-swap="outerHTML">Find Location</button>
+    
+    <button hx-get="/checkmap" hx-target="#location-form" >Try Again</button>
+</div>
+    <br />
+    <div>
+        <h2>Best Route Serive</h2>
+        <p>We offer practical solution to finding best routes through multiple location. It is easy and 99.99 percent accurate. </p>
+    <p>Our services are available 24/7 and we are always ready to help you with your traveling needs.</p>
+    <p>Enter address of the locations you want to go through and we will provide you with most optimal route.</p>
+        <div>
+            <h2>Check Route</h2>
+            <button id="swap-button" hx-get="/checkroute"hx-trigger="mouseenter once" hx-swap="outerHTML">Find Route</button>
+        </div>
     </div>
 </div>
 {% endblock %}
