--- a/backend/templates/pages/checkmap.html
+++ b/backend/templates/pages/checkmap.html
@@ -1,6 +1,10 @@
 <div>
+<div id="location-form">
     <p>Enter Your Location</p>
-    <form hx-post="/checkmap" hx-swap="outerHTML">
+    <form  hx-post="/checkmap" hx-swap="outerHTML">
         <input type="text" name="location" id="location" placeholder="Enter your location">
         <button type="submit">Submit</button>
+    </form>
+</div>
+
 </div>
