--- a/backend/templates/pages/services.html
+++ b/backend/templates/pages/services.html
@@ -22,7 +22,9 @@
     <p>Enter address of the locations you want to go through and we will provide you with most optimal route.</p>
         <div>
             <h2>Check Route</h2>
-            <button id="swap-button" hx-get="/checkroute"hx-trigger="mouseenter once" hx-swap="outerHTML">Find Route</button>
+            <button id="swap-button" hx-get="/checkroute" hx-trigger="mouseenter once" hx-swap="outerHTML">Find Route</button>
+            <button hx-get="/checkroute" hx-target="#route-point-input" >Try Again</button>
+            
         </div>
     </div>
 </div>
