--- a/backend/templates/pages/services.html
+++ b/backend/templates/pages/services.html
@@ -16,10 +16,8 @@
 </div>
     <br />
     <div>
-        <h2>Best Route Serive</h2>
-        <p>We offer practical solution to finding best routes through multiple location. It is easy and 99.99 percent accurate. </p>
-    <p>Our services are available 24/7 and we are always ready to help you with your traveling needs.</p>
-    <p>Enter address of the locations you want to go through and we will provide you with most optimal route.</p>
+        <h2>Route Serive</h2>
+        <p>Our Route service is designed to help you find the best route to your destination. It is easy to use and very accurate. </p>
         <div>
             <h2>Check Route</h2>
             <button id="swap-button" hx-get="/checkroute" hx-trigger="mouseenter once" hx-swap="outerHTML">Find Route</button>
