--- a/backend/templates/pages/services.html
+++ b/backend/templates/pages/services.html
@@ -20,7 +20,7 @@
         <p>Our Route service is designed to help you find the best route to your destination. It is easy to use and very accurate. </p>
         <div>
             <h2>Check Route</h2>
-            <button id="swap-button" hx-get="/checkroute" hx-trigger="mouseenter once" hx-swap="outerHTML">Find Route</button>
+            <button id="swap-button" hx-get="/checkoneroute" hx-trigger="mouseenter once" hx-swap="outerHTML">Find Route</button>
             <button hx-get="/checkoneroute" hx-target="#route-point-input" >Try Again</button>
             
         </div>
