--- a/backend/templates/pages/forms/onerouteform.html
+++ b/backend/templates/pages/forms/onerouteform.html
@@ -1,4 +1,4 @@
-<div>
+<div id="one-route-location-form">
     <form id="route-point-input" hx-post="/checkoneroute" hx-swap="outerHTML">
         <div id="location-inputs">
             <input type="text" name="start_location" placeholder="Start Location">
