--- a/backend/templates/pages/services.html
+++ b/backend/templates/pages/services.html
@@ -21,7 +21,7 @@
         <div>
             <h2>Check Route</h2>
             <button id="swap-button" hx-get="/checkoneroute" hx-trigger="mouseenter once" hx-swap="outerHTML">Find Route</button>
-            <button hx-get="/checkoneroute" hx-target="#route-point-input" >Try Again</button>
+            <button hx-get="/checkoneroute" hx-target="#one-route-location-form" >Try Again</button>
             
         </div>
     </div>
