--- a/backend/templates/pages/map/one_route_map.html
+++ b/backend/templates/pages/map/one_route_map.html
@@ -1,38 +1,29 @@
-
 <div>
-    Your start location is {{ start_location }} and end_location is {{end_location}}.
+    Your start location is {{ start_location }} and end location is {{end_location}}.
     
-    <div id="map-container" ></div>
+    <div id="map-route-container" ></div>
     <br>
-
-    
 
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script>
-        var map; 
-        var start_lat = {{ latitude }};
-        var lon = {{ longitude }};
-       
-        document.body.addEventListener('htmx:afterSwap', (event) => {
-    // Check if the swapped content includes the map container
-    if (document.getElementById('map-container')) {
-        var map = L.map('map-container', {
-            center: [lat, lon],
-            zoom: 14
+        var routeData = {{ route | tojson }};
+        var coords = routeData.routes[0].geometry.coordinates.map(function(coord) {
+            return [coord[1], coord[0]]; // flip
         });
-        // if (map) {
-        //     map.remove(); // Remove the existing map instance
-        // }
-       
-        L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
-            attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'
-        }).addTo(map);
-    
-        L.marker([lat, lon]).addTo(map);
 
-    }
-});
+        document.body.addEventListener('htmx:afterSwap', (event) => {
+            if (document.getElementById('map-route-container')) {
+                var map = L.map('map-route-container', {
+                    center: coords[0],
+                    zoom: 12
+                });
+
+                L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+                    attribution: '&copy; OpenStreetMap contributors'
+                }).addTo(map);
+
+                L.polyline(coords, { color: 'blue' }).addTo(map);
+            }
+        });
     </script>
 </div>
-
-
