--- a/backend/templates/pages/services.html
+++ b/backend/templates/pages/services.html
@@ -19,11 +19,19 @@
         <h2>Route Serive</h2>
         <p>Our Route service is designed to help you find the best route to your destination. It is easy to use and very accurate. </p>
         <div>
-            <h2>Check Route</h2>
             <button id="swap-button" hx-get="/checkoneroute" hx-trigger="mouseenter once" hx-swap="outerHTML">Find Route</button>
             <button hx-get="/checkoneroute" hx-target="#one-route-location-form" >Try Again</button>
             
         </div>
+    </div>
+    <br />
+    <div>
+        <h2>Path using Nearest Neighbour Algirthm</h2>
+        <p>Our Path service is designed to help you find the best path to your destination using Nearest Neighbour Algorithm. It is easy to use and very accurate. </p>
+        <div>
+            <button id="swap-button" hx-get="/checkpath" hx-trigger="mouseenter once" hx-swap="outerHTML">Find Path</button>
+            <button hx-get="/checkpath" hx-target="#path-location-form" >Try Again</button>
+        </div>  
     </div>
 </div>
 {% endblock %}
