--- a/backend/templates/pages/services.html
+++ b/backend/templates/pages/services.html
@@ -26,11 +26,11 @@
     </div>
     <br />
     <div>
-        <h2>Path using Nearest Neighbour Algirthm</h2>
+        <h2>Path using Nearest Neighbour Algorithm</h2>
         <p>Our Path service is designed to help you find the best path to your destination using Nearest Neighbour Algorithm. It is easy to use and very accurate. </p>
         <div>
-            <button id="swap-button" hx-get="/checkpath" hx-trigger="mouseenter once" hx-swap="outerHTML">Find Path</button>
-            <button hx-get="/checkpath" hx-target="#path-location-form" >Try Again</button>
+            <button id="swap-button" hx-get="/nearestnightbour" hx-trigger="mouseenter once" hx-swap="outerHTML">Find Path</button>
+            <button hx-get="/nearestnightbour" hx-target="#nearest-neighbour-form" >Try Again</button>
         </div>  
     </div>
 </div>
